# TP_P

./: CMakeLists.txt
headers/: autoBot.h  board.h  files.h  game.h  menu.h  play.h  saves.h  utils.h
sources/: autoBotMenu.c  autoBotPlay.c  board.c  boardAlloc.c  files.c  game.c  main.c  play.c  playMenu.c  saveTurns.c  selectMenu.c  utils.c
